desafio finalizado com sucesso

--- a/index.html
+++ b/index.html
@@ -3,32 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de germinação</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Germinação</title>
+    <link rel=""stylesheet" href="style.css">
 </head>
+
 <body>
-        <h1>Sistema de germinação</h1>
-    <div id="germinação">
-        <div id="semente" class="pnt"> </div>
-        <div id="plantinha"  class="pnt"> </div>
-        <div id="planta"    class="pnt"> </div>
- 
-    </div>
-
-    <img id="pntsemente" src="img1.jpeg" src="img2.jpeg" src="img3.jpeg"  alt="semente" width="500">
-
-
-
-    <div id="botoes">
-        <button id="btnsemente">  semente </button>
-        <button id="btnplantinha">   plantinha   </button>
-        <button id="btnplanta">     planta     </button>
-        <button id="btnAutomático">Automático</button>
-        <button id="btnParar">     Parar     </button>
-    </div>
-
-
-
-<script src="script.js"></script>
+    <center> <h1>Sitema de Germinação</h1></center>
+    <center><img id="germinacao" src="img1.jpeg" alt="Uma semente" width="500"></center>
+    <br>
+    <center><div id="botoes">
+        <button id="btnsemente" >     semente        </button>
+        <button id="btnplantinha" >   plantinha      </button>
+        <button id="btnplanta" >      planta         </button>
+        <button id="btnplantaadulta" >plantaadulta   </button>
+        <button id="btnautomatico" >  automático     </button>
+        <button id="btnparar" >       parar          </button>
+        
+    </div></center>
+    
+<script src="script.js"></script>    
 </body>
 </html>
